# ES_PCS_26

./: README.md  nomedelfile.txt
esempi/: esempio.cpp  input.txt  input_es1.txt  pritax.cpp  prog
esercitazione1/: CMakeLists.txt  ESE_1.cpp  printargvs.cpp  prog
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp  soluzione_corretta.hpp  test_gradiente_coniugato.cpp  test_soluz_corretta.cpp
esercitazione10/matlab_supporto_calcoli/: t_grad_coniug_calcoli.m
esercitazione11/: CMakeLists.txt  cicli_min_dfs.hpp  de_pina.hpp  graph_visit.hpp  lifo.hpp  main.cpp  test_de_pina.cpp  test_de_pina_conv.cpp  test_dijkstra_path_generico.cpp  undirected_graph.hpp
esercitazione2/: 1_posizionamento_memoria.cpp  CMakeLists.txt  ESE_2_1.docx  bubblesort.cpp  ese2_2.cpp  prog1  prog2  ~$SE_2_1.docx
esercitazione3/ese_bool/: main.cpp  rational.hpp
esercitazione3/esempi/: CMakeLists.txt  main_h.cpp  vec2_h.hpp
esercitazione3/esercitazione/: CMakeLists.txt  rational.hpp
esercitazione4/esempi/: CMakeLists.txt
esercitazione4/esercitazione/: CMakeLists.txt  grafici_es4.m  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  grafico_es5.asv  grafico_es5.m  measure_sorts.cpp  sorts.h  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksorthybrid.cpp  test_selectionsort.cpp
esercitazione5/build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  tempi.csv  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_quicksorthybrid  test_selectionsort
esercitazione5/build_debug/Testing/Temporary/: CTestCostData.txt
esercitazione5/build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  measure_sorts  tempi.csv  test_bubblesort  test_insertionsort  test_mergesort  test_quicksort  test_quicksorthybrid  test_selectionsort
esercitazione5/build_release/Testing/Temporary/: CTestCostData.txt
esercitazione5/esempi_per_debugging_ms/: sorts.h  test_deb_ms.cpp  test_debug  test_mergesort.cpp  test_mergesort_san
esercitazione6/: test_edge_disuguaglianza.cpp  test_edge_uguaglianza.cpp  test_graph_costr.cpp  test_graph_differenza.cpp  test_graph_neighbours.cpp  test_graph_number_at.cpp  test_ordine_canonico.cpp  undirected_edge.h
esercitazione6/map_set_throw/: CMakeLists.txt  test_edge_disuguaglianza.cpp  test_edge_minore.cpp  test_graph_add_edge.cpp  test_graph_number_at.cpp  undirected_edge.h
esercitazione6_8/: CMakeLists.txt  test_edge_minore.cpp  test_graph_all_nodes.cpp  undirected_edge.h  undirected_graph.h
esercitazione6_8/map_set_throw/: test_edge_uguaglianza.cpp  test_from_to.cpp  test_graph_all_nodes.cpp  test_graph_costr.cpp  test_graph_neighbours.cpp  undirected_edge.h  undirected_graph.h
esercitazione8/: CMakeLists.txt  main.cpp  test_graph_add_edge.cpp  test_graph_all_edges.cpp  test_graph_at.cpp
esercitazione8/map_set_throw/: CMakeLists.txt  main.cpp  test_graph_all_edges.cpp  test_graph_at.cpp  test_graph_differenza.cpp  test_ordine_canonico.cpp
esercitazione9/: CMakeLists.txt  dijkstra.hpp  fifo.hpp  graph_visit.hpp  main.cpp
progetto_pcs_Fantini_Gregorio_Labella/: CMakeLists.txt  ausil_de_pina_test.hpp  build_matrici.hpp  dfs_ausil.hpp  dijkstra_path.hpp  fifo.hpp  gradiente_coniugato_prog.hpp  grafi_netlist.hpp  main.cpp  netlist.hpp  netlist_esempio.txt  netlist_prova.txt  print_cycle.hpp  test_ausil_de_pina.cpp  test_build_matrici.cpp  test_dfs_ausil.cpp  test_errore_v.txt  test_fund_cycles_dfs.cpp  test_gradiente_coniugato.cpp  test_grafi_netlist.cpp  test_netlist.cpp  test_no_double.txt  test_valido.txt
