cmake_minimum_required(VERSION 3.20)
project(esercitazione_10) 
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla -Wno-sign-compare")
set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel" FORCE)
find_package(Eigen3 CONFIG REQUIRED)
list(APPEND libraries_list PUBLIC Eigen3::Eigen)
add_executable (main main.cpp)
target_link_libraries(main ${libraries_list})
add_executable(test_grad_coniug test_gradiente_coniugato.cpp)
add_test(NAME gradiente_coniugato COMMAND test_grad_coniug)
target_link_libraries(test_grad_coniug ${libraries_list})
enable_testing()