cmake_minimum_required(VERSION 3.20)
project(esercitazione8)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")
add_executable(main main.cpp)
add_executable(test_ordine_canonico test_ordine_canonico.cpp)
add_test(NAME ordine_canonico COMMAND test_ordine_canonico)
add_executable(test_from_to test_from_to.cpp)
add_test(NAME from_to COMMAND test_from_to)
add_executable(test_e_uguaglianza test_edge_uguaglianza.cpp)
add_test(NAME e_uguaglianza COMMAND test_e_uguaglianza)
add_executable(test_e_disuguaglianza test_edge_disuguaglianza.cpp)
add_test(NAME e_disuguaglianza COMMAND test_e_disuguaglianza)
add_executable(test_e_minore test_edge_minore.cpp)
add_test(NAME e_minore COMMAND test_e_minore)
add_executable(test_g_costr test_graph_costr.cpp)
add_test(NAME g_costr COMMAND test_g_costr)
add_executable(test_g_neigh test_graph_neighbours.cpp)
add_test(NAME g_neigh COMMAND test_g_neigh)
add_executable(test_g_add_edge test_graph_add_edge.cpp)
add_test(NAME g_add_edge COMMAND test_g_add_edge)
add_executable(test_g_all_edges test_graph_all_edges.cpp)
add_test(NAME g_all_edges COMMAND test_g_all_edges)
add_executable(test_g_all_nodes test_graph_all_nodes.cpp)
add_test(NAME g_all_nodes COMMAND test_g_all_nodes)
add_executable(test_g_number test_graph_number_at.cpp)
add_test(NAME g_number COMMAND test_g_number)
add_executable(test_g_at test_graph_at.cpp)
add_test(NAME g_at COMMAND test_g_at)
add_executable(test_g_differenza test_graph_differenza.cpp)
add_test(NAME g_differenza COMMAND test_g_differenza)

enable_testing()


